fix: grid gap

--- a/tab-grids.css
+++ b/tab-grids.css
@@ -8,6 +8,8 @@
   grid-template-columns: repeat(auto-fill, minmax(42px, 1fr));
   grid-auto-rows: max-content;
   padding: 10px 6px 0px 6px !important;
+  row-gap: 5px;
+  column-gap: 4px;
 }
 
 .tab-strip > span:has(.tab-position:not(.is-pinned)) {
@@ -29,12 +31,9 @@
   grid-column: 1/-1;
   --PositionY: 5px !important;
   position: relative;
+  width: 238px;
 }
 
 .tab.pinned .title {
   display: none;
-}
-
-.tab-position.is-pinned .tab {
-  margin: 5px 2px 0px 2px !important;
 }
