--- a/tab.css
+++ b/tab.css
@@ -13,7 +13,7 @@
   transition:
     background 0.1s,
     color      0.1s;
-  height: 40px;
+  height: 45px;
   justify-content: center;
 }
 
